# admin_spotCheck_before_masterlist

./: DELIVERY_SUMMARY.md  DailyDuplicateAnalysis.py  HOW_TO_PACKAGE_AND_SEND.md  Results_gitkeep.txt  SIMPLE_README.md  Source_gitkeep.txt  duplicate_checker_v1.py  pyproject.toml  run_duplicate_checker.bat
DuplicateChecker/: CONFIG_PRESETS.py  How to start.txt  README_START_HERE.txt  USER_GUIDE.md  VERSION_COMPARISON.md  duplicate_checker_v2.py  pyproject.toml  run_daily.bat  run_duplicate_checker.bat  setup_first_time.bat
DuplicateChecker/Results/: .gitkeep  OUTPUT_APPEARS_HERE.txt
DuplicateChecker/Source/: README_PUT_FILES_HERE.txt
Results/: duplicate_analysis_20260421_090347.xlsx  duplicate_analysis_20260421_095254.xlsx  duplicate_analysis_20260421_135937.xlsx  duplicate_analysis_results_20260420.xlsx
Source/: Master_Data.xlsx  Master_Data_backup_20260421_090351.xlsx  Master_Data_backup_20260421_095308.xlsx  ~$Master_Data_backup_20260421_090351.xlsx
