[project]
name = "duplicate-checker"
version = "2.0.0"
description = "Shop Duplicate Detection System with Auto-Merge"
readme = "SIMPLE_README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "openpyxl>=3.1.0",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"